--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "chalk": "^5.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@types/node": "^18.16.3",
     "@types/npmcli__promise-spawn": "^6.0.0",
     "@vercel/ncc": "^0.36.1",
     "@vitest/coverage-c8": "^0.31.0",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.4",
